@@ -14,3 +14,4 @@ class UserStats(DataMartModel):
     class Meta:
         ordering = ('-month', 'country_name')
         unique_together = ('country_name', 'month')
+        verbose_name = "User Access Statistics"
