@@ -1,141 +1,0 @@
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box; }
-
-body, html {
-  height: 50%;
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif; }
-  body a, html a {
-    color: black; }
-    body a:hover, html a:hover {
-      color: black; }
-  body span.str, html span.str {
-    color: black; }
-
-.limiter {
-  width: 100%;
-  margin: 0 auto; }
-
-.master-container {
-  width: 100%;
-  min-height: 94vh;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  padding: 15px; }
-
-.box {
-  width: 1170px;
-  background: #fff;
-  overflow: hidden;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: stretch;
-  flex-direction: row-reverse; }
-
-.right {
-  width: 50%;
-  flex-wrap: wrap; }
-  .right form {
-    padding: 100px 0 0 65px; }
-  .right .center {
-    width: 100%;
-    text-align: center; }
-  .right h1 {
-    width: 100%;
-    font-size: 24pt;
-    text-align: center; }
-  .right h2 {
-    font-size: 14pt; }
-  .right ul {
-    padding: 20px 0 0 65px;
-    list-style: none;
-    font-size: 18pt; }
-  .right a {
-    color: #2090F8; }
-
-/* [ login more ]*/
-.left {
-  width: 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  position: relative;
-  z-index: 1; }
-
-.m-b-20 {
-  margin-bottom: 20px; }
-
-.wrap-input100 {
-  width: 100%;
-  position: relative;
-  border: 1px solid #e6e6e6; }
-
-.input100 {
-  display: block;
-  width: 100%;
-  background: transparent;
-  font-size: 18px;
-  color: #666666;
-  line-height: 1.2;
-  padding: 0 25px; }
-
-input.input100 {
-  height: 55px; }
-
-/*[ Button ]*/
-.container-login100-form-btn {
-  width: 100%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center; }
-
-.login100-form-btn {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 20px;
-  width: 100%;
-  height: 50px;
-  border-radius: 3px;
-  background: #2090F8;
-  font-size: 12px;
-  color: #fff;
-  line-height: 1.2;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  transition: all 0.4s; }
-
-.login100-form-btn:hover {
-  background: #333333; }
-
-/* [ Responsive ]*/
-.navbar {
-  border-top: none;
-  background: #2090F8;
-  color: black; }
-  .navbar a.navbar-brand {
-    color: white; }
-
-/*# sourceMappingURL=style.css.map */
