@@ -9,7 +9,7 @@
     {% endblock head %}
 
 </head>
-<body>
+<body class="{{ page }}">
 
 {% block content %}
 
