@@ -9,14 +9,12 @@
             <li><a href="{% url "api:api-root" %}">API</a></li>
             <li><a href="{% url "api:schema-redoc" %}">Documentation</a></li>
             <li><a href="{% url "api:schema-swagger-ui" %}">Swagger</a></li>
+            <li><a href="{% url "monitor" %}">Monitor</a></li>
             {% if request.user.is_staff %}
                 <li><a href="{% url "admin:index" %}">Admin</a></li>
             {% endif %}
             {% if request.user.is_superuser %}
                 <li><a href="{% url "sys-info" %}">System Info</a></li>
-
-{#                <li><a href="http://{% server_ip %}:15000">Supervisor</a></li>#}
-{#                <li><a href="http://{% server_ip %}:5555">Flower</a></li>#}
             {% endif %}
             <div>&nbsp;</div>
             <li><a href="{% url "logout" %}">Logout</a></li>
