@@ -1,6 +1,8 @@
 1.7 (dev)
 ---------
-* python 3.7
+* add YAML format
+* new 'Monitor' page to check dataset last update date
+*
 
 
 1.6
